Bug 567603 - "Selected folders with new messages/mail are hard to read using Windows Classic desktop theme" [r=bwinton,standard8 ui-r=clarkbw]

--- a/mail/themes/qute/mail/folderPane.css
+++ b/mail/themes/qute/mail/folderPane.css
@@ -218,7 +218,19 @@ treechildren::-moz-tree-image(folderNameCol, isServer-true, serverType-rss) {
 treechildren::-moz-tree-cell-text(folderNameCol, biffState-NewMail, isServer-true),
 treechildren::-moz-tree-cell-text(folderNameCol, newMessages-true),
 treechildren::-moz-tree-cell-text(folderNameCol, specialFolder-Inbox, newMessages-true) {
-  color: #0066cc;
+  color: -moz-hyperlinktext;
+}
+
+treechildren::-moz-tree-cell-text(folderNameCol, biffState-NewMail, isServer-true, selected),
+treechildren::-moz-tree-cell-text(folderNameCol, newMessages-true, selected),
+treechildren::-moz-tree-cell-text(folderNameCol, specialFolder-Inbox, newMessages-true, selected) {
+  color: -moz-CellHighlightText;
+}
+
+treechildren::-moz-tree-cell-text(folderNameCol, biffState-NewMail, isServer-true, selected, focus),
+treechildren::-moz-tree-cell-text(folderNameCol, newMessages-true, selected, focus),
+treechildren::-moz-tree-cell-text(folderNameCol, specialFolder-Inbox, newMessages-true, selected, focus) {
+  color: HighlightText;
 }
 
 treechildren::-moz-tree-cell-text(closed, subfoldersHaveUnreadMessages-true) {
